# simulator

./: .gitignore  README.md  mypy.ini  pyproject.toml
simulator/: basic.py  coordinate.py  engine.py  environment.py  main.py  parts.py
tests/: test_simulator.py
