[tool.poetry]
name = "simulator"
version = "0.1.0"
description = ""
authors = ["Yuuki Fujihara <mail@fujiy.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
sympy = "^1.5.1"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
main = "simulator.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

